--- a/blog.html
+++ b/blog.html
@@ -83,6 +83,11 @@
         </div>
         <div class="main section">
             <div class="container-1140">
+                    <h2>How to Backup Your WordPress Website with UpdraftPlus</h2>
+                    <p>Ask yourself a question: when was the last time you backed up your WordPress website? Hopefully the answer is not “three years ago”, or worse still, “never”! Imagine spending weeks or months on building your website, only to lose all the results of your hard work forever 😭 …</p>
+                    <br>
+                    <a class="btn-primary" href="https://sybiltec.com/backup-wordpress-website-using-updraftplus">Backup Your Website</a>
+                <div class="padding-top">
                     <h2>Bexley Talking Business</h2>
                     <p>Are you an SME or sole trader based in Bexley? Do you need help with running your business? If so, you may be eligible for free business support. Register now for the programme …</p>
                     <br>
