--- a/index.html
+++ b/index.html
@@ -330,6 +330,20 @@
                     <p>Read my latest blog posts.</p>
                 </div>
                 <div class="row">
+                    <div class="col-4">          
+                        <div class="blog-card">  
+                            <a href="https://sybiltec.com/backup-wordpress-website-using-updraftplus"><img src="images/external-hard-drive-with-brushed-stainless-steel-case-350x183.jpg" 
+                                alt="External hard drive with brushed stainless steel case"></a>  
+                            <div class="blog-card-text">               
+                                <h3>How to Backup Your WordPress Website with UpdraftPlus</h3>
+                                <p>19 December 2023</p>
+                                <p>Ensure that you make backups of your website on a regular basis so that your content is retrievable in case your website is lost for any reason.</p>
+                                <div class="padding-bottom padding-top">
+                                    <a class="btn-primary" href="https://sybiltec.com/backup-wordpress-website-using-updraftplus">Backup Your Website</a>   
+                                </div>
+                            </div>
+                        </div>
+                    </div> 
                     <div class="col-4">  
                         <div class="blog-card">   
                             <a href="https://sybiltec.com/bexley-talking-business">
@@ -347,7 +361,7 @@
                     </div>
                     <div class="col-4">
                         <div class="blog-card">   
-                            <a href="https://sybiltec.com/web-design-process-explained-12-easy-steps"><img src="https://sybiltec.com/images/mr-bean-waiting-350x183.png" 
+                            <a href="https://sybiltec.com/fix-slow-wordpress-website"><img src="https://sybiltec.com/images/mr-bean-waiting-350x183.png" 
                                 alt="Mr Bean waiting"></a>     
                             <div class="blog-card-text">           
                                 <h3>10 Reasons Why Your WordPress Website is Slow</h3>
@@ -359,20 +373,6 @@
                             </div>
                         </div> 
                     </div>
-                    <div class="col-4">          
-                        <div class="blog-card">  
-                            <a href="https://sybiltec.com/upgrade-google-analytics-4"><img src="images/person-using-google-analytics-on-macbook-air-350x183.jpg" 
-                                alt="Person using Google Analytics on MacBook Air"></a>  
-                            <div class="blog-card-text">               
-                                <h3>How Do I Upgrade to Google Analytics 4?</h3>
-                                <p>15 June 2023</p>
-                                <p>If you are still using Universal Analytics, you must upgrade to GA4 before 1st July 2023 to avoid losing data. Read my blog post to learn how to perform the update.</p>
-                                <div class="padding-bottom padding-top">
-                                    <a class="btn-primary" href="https://sybiltec.com/upgrade-google-analytics-4">Upgrade GA Now</a>   
-                                </div>
-                            </div>
-                        </div>
-                    </div> 
                 </div>
             </div>
             <div class="center padding-bottom padding-top">
