--- a/privacy-notice.html
+++ b/privacy-notice.html
@@ -316,29 +316,18 @@ permalink: /privacy-notice/
                         <p><strong>Contact</strong></p>
                             <p><a href="mailto:info@sybiltec.com" target="_blank">info@sybiltec.com</a></p>
                             <p><a href="tel:00447768059730">+44(0)7768059730</a></p>
+                            <p><a href="https://www.linkedin.com/in/sybil-m/" target="_blank" rel="noopener noreferrer">
+                    <i class="fa-brands fa-linkedin"></i></a></p>
                         <p>
                             <a href="https://www.uksmallbusinessdirectory.co.uk/bid/284687/" rel="noopener noreferrer" target="_blank"><img src="https://www.uksmallbusinessdirectory.co.uk/links/uksbd-100.png" alt="Business Directory"></a>
                         </p>      
                     </div>
+                    <div cl
                     <div class="col-2-4">
                         <p><strong>Award</strong></p>
                         <img src="https://sybiltec.com/images/awards/digital-services-customer-service-excellence-award-2024.webp" alt="SME News Digital Services Customer Service Excellence Award 2024">
                     </div>
                 </div>
-            </div>
-            <div class="container-1140 center padding-top padding-bottom">
-                <a href="https://www.linkedin.com/in/sybil-m/" target="_blank" rel="noopener noreferrer">
-                    <i class="fa-brands fa-linkedin"></i></a>
-                <a href="https://uk.pinterest.com/sybiltec/" target="_blank" rel="noopener noreferrer">
-                    <i class="fa-brands fa-pinterest"></i></a>
-                <a href="https://www.facebook.com/sybiltec" target="_blank" rel="noopener noreferrer">
-                    <i class="fa-brands fa-facebook"></i></a>
-                <a href="https://x.com/sybiltec" target="_blank" rel="noopener noreferrer">
-                    <i class="fa-brands fa-x-twitter"></i></a>
-                <a href="https://www.instagram.com/sybiltec" target="_blank" rel="noopener noreferrer">
-                        <i class="fa-brands fa-instagram"></i></a>
-                <a href="https://www.youtube.com/@sybiltec" target="_blank" rel="noopener noreferrer">
-                    <i class="fa-brands fa-youtube"></i></a>
             </div>
             <div class="copyright section center">
                 <p>Copyright &copy;<span id="year"></span> Sybiltec. ICO registration reference: ZB744424. The Engine House, 2 Veridion Way, Erith DA18 4AL</p>
